--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,11 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat App | Rspack</title>
-    </head>
+    <title>Max Messenger</title>
+</head>
 <body>
     <div id="app">
-        <h1>Загрузка...</h1>
+        <div id="auth-view">
+            <div class="auth-container">
+                <h1>Max Messenger 💬</h1>
+                
+                <form id="login-form">
+                    <h2>Вход</h2>
+                    <input type="email" id="login-email" placeholder="Email" required>
+                    <input type="password" id="login-password" placeholder="Пароль" required>
+                    <button type="submit">Войти</button>
+                    <p>Нет аккаунта? <a href="#" id="go-to-register">Регистрация</a></p>
+                </form>
+
+                <form id="register-form" style="display: none;">
+                    <h2>Регистрация</h2>
+                    <input type="text" id="reg-username" placeholder="Имя пользователя" required>
+                    <input type="email" id="reg-email" placeholder="Email" required>
+                    <input type="password" id="reg-password" placeholder="Пароль" required>
+                    <button type="submit">Создать аккаунт</button>
+                    <p>Есть аккаунт? <a href="#" id="go-to-login">Войти</a></p>
+                </form>
+            </div>
+        </div>
+
+        <div id="chat-view" style="display: none;">
+            <header>
+                <span id="current-user">User</span>
+                <button id="logout-btn">Выйти</button>
+            </header>
+            <main>
+                <div id="chat-list">
+                    <p>Список чатов...</p>
+                </div>
+                <div id="chat-window">
+                    <div id="messages"></div>
+                    <div class="input-area">
+                        <input type="text" id="message-input" placeholder="Напиши сообщение...">
+                        <button id="send-btn">Send</button>
+                    </div>
+                </div>
+            </main>
+        </div>
     </div>
 </body>
 </html>
